--- a/sample/app/views/static_pages/help.html.erb
+++ b/sample/app/views/static_pages/help.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<%provide(:title,"Help")%>
 <head>
 	<title>
-		
+		<%=yield(:title)%>
 	</title>
 	<center>
 	<br><br><br><br>
