--- a/sample/app/views/static_pages/home.html.erb
+++ b/sample/app/views/static_pages/home.html.erb
@@ -1,6 +1,15 @@
+<!DOCTYPE html />
+<%provide(:title,"Home") %>
+<html>
+<head>
+<title><%=yield(:title) %></title>
+</head>
+<body>
 <CENTER>
 <br><br><br>
 <h1> WELCOME HOME </h1>
 <H3>Work is in progress .... WILL REACH YOU SOON</H3>
 
 </CENTER>
+</body>
+</html>
