beautified webiste using  bootstrap and css

--- a/sample/app/views/static_pages/about.html.erb
+++ b/sample/app/views/static_pages/about.html.erb
@@ -2,11 +2,13 @@
 
 <%provide(:title,"About") %>
 
-<title><%=yield(:title)%></title>
+<title><%=full_title(yield(:title))%></title>
 
 <center>
 <br><br><br><br>
-<h1> I am learning about you.. </h1> <br><br>
-<h1>Will come to you SOOON ... </h1>
+<h2>This is a website  developed by <a href" ">Paul Joe George </a>- CEO of PJDesigns </h2>
+<h3>"We are here to help you in  designing issues" </h3>
 
 </center>
+</html>
+
