--- a/sample/app/views/static_pages/help.html.erb
+++ b/sample/app/views/static_pages/help.html.erb
@@ -12,7 +12,7 @@
 </head>
 <body>
 <center>
-<a href="www.google.com">Click here for help</a>
+<a href="https://www.google.co.jp/?gfe_rd=cr&dcr=0&ei=f5uvWfbHO6T98AfZsamwBg">Click here for help</a>
 </center>
 </body>
 </html>
