--- a/sample/app/views/layouts/application.html.erb
+++ b/sample/app/views/layouts/application.html.erb
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html>
-<%provide(:title,"|Ruby on Rails Tutorial") %>
+
   <head>
-    <title><%=yield(:title)%></title>
+    <title>
+    <%=full_title(yield(:title))%>
+    	
+    </title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body >
+   <header class="navbar  navbar-fixed-top navbar-inverse">  
+        <div class="container ">
+<%= link_to "PJ DESIGNS", '#', id: "logo" %>
+
+<nav>
+<ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Home",   '/' %></li>
+            <li><%= link_to "Help",   'help' %></li>
+            <li><%= link_to "Contact", 'contact'%></li>
+             <li><%= link_to "About", 'about'%></li>
+          </ul>
+        </nav>
+        </div>
+
+    </header>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
