--- a/sample/app/views/static_pages/home.html.erb
+++ b/sample/app/views/static_pages/home.html.erb
@@ -18,7 +18,7 @@
             
           
            <%= link_to "Sign In", '#', class: "btn btn-lg btn-primary" %> 
-<%= link_to "Sign Up", '#', class: "btn btn-lg btn-primary" %>
+<%= link_to "Sign Up", 'signup', class: "btn btn-lg btn-primary" %>
 </center>
 </div >
 <div class="center">
