--- a/sample/app/views/layouts/application.html.erb
+++ b/sample/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 <nav>
 <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",   '/' %></li>
-            <li><%= link_to "Help",   'help' %></li>
+            <li><%= link_to "Help",   help_path %></li>
             <li><%= link_to "Contact", 'contact'%></li>
              <li><%= link_to "About", 'about'%></li>
           </ul>
