--- a/sample/app/views/static_pages/help.html.erb
+++ b/sample/app/views/static_pages/help.html.erb
@@ -3,7 +3,8 @@
 <%provide(:title,"Help")%>
 <head>
 	<title>
-		<%=yield(:title)%>
+	
+		<%=full_title(yield(:title)) %>
 	</title>
 	<center>
 	<br><br><br><br>
