--- a/sample/app/views/layouts/application.html.erb
+++ b/sample/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
     </header>
     <div class="container">
       <%= yield %>
+      <%= debug(params) if Rails.env.development? %>   <!--   this line ensures that debug information is not shown to users-->
     </div>
   </body>
 </html>
