--- a/sample/app/views/users/new.html.erb
+++ b/sample/app/views/users/new.html.erb
@@ -9,7 +9,26 @@
 <div class="center jumbotron" class="body">
 <h1>Register PJDesigns </h1>
 </div>
+ 
+ 
+ <div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
 
+      <%= f.label :email %>
+      <%= f.email_field :email %>
 
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
 </body>
 </html>
