--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -29,7 +29,11 @@
 
     </header>
     <div class="container">
+    <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
+
       <%= debug(params) if Rails.env.development? %>   <!--   this line ensures that debug information is not shown to users-->
     </div>
   </body>
