--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html />
 <%provide(:title,"Home") %>
-<html>
+
 <head>
 <title><%=full_title(yield(:title)) %></title>
 </head>
@@ -15,10 +15,10 @@
 <center>
 <h1> WELCOME HOME  </h1>
 <br>
-            
-          
-           <%= link_to "Sign In", '#', class: "btn btn-lg btn-primary" %> 
-           <%= link_to "Sign Up", 'signup', class: "btn btn-lg btn-primary" %>
+
+
+           <%= link_to "Sign In", '#', class: "btn btn-lg btn-primary" %>
+           <%= link_to "Sign Up", '/signup', class: "btn btn-lg btn-primary" %>
 </center>
 </div >
 <div class="center">
