Basic Login added

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,7 +17,7 @@
 <br>
 
 
-           <%= link_to "Sign In", '#', class: "btn btn-lg btn-primary" %>
+           <%= link_to "Sign In", '/login', class: "btn btn-lg btn-primary" %>
            <%= link_to "Sign Up", '/signup', class: "btn btn-lg btn-primary" %>
 </center>
 </div >
